syntax = "proto3";

package buildbarn.configuration.bb_scheduler;

import "pkg/proto/configuration/grpc/grpc.proto";

option go_package = "github.com/buildbarn/bb-remote-execution/pkg/proto/configuration/bb_scheduler";

message ApplicationConfiguration {
  // Maximum number of build actions that can be enqueued.
  uint64 jobs_pending_max = 1;

  // Address on which to listen to expose Prometheus metrics.
  string metrics_listen_address = 2;

  // gRPC servers to spawn to listen for requests from clients
  // (bb_storage or Bazel).
  repeated buildbarn.configuration.grpc.GRPCServerConfiguration
      client_grpc_servers = 3;

  // gRPC servers to spawn to listen for requests from bb_worker.
  repeated buildbarn.configuration.grpc.GRPCServerConfiguration
      worker_grpc_servers = 4;
}
